--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
+    "nodemon": "^3.1.9"
   }
 }
