--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -41,6 +41,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+node_modules
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
@@ -78,6 +79,7 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -89,6 +91,7 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
+dist
 dist
 
 # Gatsby files
