--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "backend",
+  "name": "myKeep-backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "npm run dev",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index.js",
+    "build": "tsc",
+    "dev": "ts-node-dev src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -15,11 +15,11 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "express-async-handler": "^1.2.0",
-    "mongoose": "^8.9.5",
-    "nodemon": "^3.1.9"
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "typescript": "^4.4.4",
+    "ts-node-dev": "^1.1.8"
   }
 }
